Fixed remote webDriver

--- a/src/main/resources/configFile.properties
+++ b/src/main/resources/configFile.properties
@@ -7,6 +7,7 @@ URL=https://www.google.com/
 # chrome,firefox and ie are the options available
 BROWSER=chrome
 # grid and local are the modes available
-MODE=local
-
-`
+MODE=grid
+HTTP_PROXY=false
+#PROXY_URL=
+HUB_URL=http://localhost:4444/wd/hub
